# recsys-mixture-of-experts

./: README.md  pyproject.toml
notebooks/: movielens-data-eda.ipynb  test-moe-on-synthetic-data.ipynb  working.ipynb
scripts/: process_movielens_1m.py
src/: mf.py  mlp.py  moe.py
