[tool.poetry]
name = "recsys-moe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.10.0"
numpy = "^1.24.2"
ipython = "^8.10.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
pandas = "^1.5.3"
torch = "^1.13.1"
scikit-learn = "^1.2.1"
pytorch-lightning = "^1.9.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
